clang/test/utils/update-verify-tests/Inputs/update-single-check.c
void foo() {
    // expected-error@+1{{asdf}}
    bar = 2;
}
